--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <label for="Username">Username</label>
+    <input type="text" id="username" name="Username" placeholder="Enter here"/>
+    <button onclick="getValue()">Check Password</button>
 </body>
 </html>
