--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <label for="Username">Username</label>
     <input type="text" id="username" name="Username" placeholder="Enter here"/>
-    <button onclick="getValue()">Check Password</button>
+    <button onclick="testWord()">Check Password</button>
 </body>
 </html>
