--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Password Validator</title>
 </head>
 <body>
-    <label for="Username">Username</label>
-    <input type="text" id="username" name="Username" placeholder="Enter here"/>
+    <label for="Password">Password</label>
+    <input type="text" id="password" name="Password" placeholder="Enter here"/>
     <button onclick="testWord()">Check Password</button>
 </body>
 </html>
