--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <label for="Password">Password</label>
     <input type="text" id="password" name="Password" placeholder="Enter here"/>
     <button onclick="testWord()">Check Password</button>
+    <script src="java.js"></script>
 </body>
 </html>
